--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,18 @@
 #content {
   margin-left: auto;
   margin-right: auto;
-  width: 650px;
+  width: 660px;
 }
 
-#greeting-container {
-  margin-top: 20px;
+#quote-container {
+  margin-top: 10px;
+}
+
+figure {
+  display: inline-block;
+  text-align: center;
+  margin: 5px;
+}
+figure img {
+  /* vertical-align: top;  */
 }
