--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -13,6 +13,18 @@ figure {
   text-align: center;
   margin: 5px;
 }
+
+h1 {
+  text-align: center;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 figure img {
   /* vertical-align: top;  */
 }
