--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -69,3 +69,8 @@ nav {
   background-color: rgb(14, 17, 17);
   color: rgb(226, 226, 226);
 }
+
+.inline {
+  display:inline-block;
+  width: 10%;
+}
